--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,26 +9,33 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/detail_image"
-        android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/detail_image_gradient"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@drawable/list_image_gradient"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/detail_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/detail_image" />
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="monospace"
         android:text="Quiz Title"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +43,17 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/detail_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="monospace"
+        android:justificationMode="inter_word"
         android:text="Quiz Description"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_title" />
 
@@ -56,9 +66,21 @@
         android:fontFamily="monospace"
         android:text="Difficulty"
         android:textColor="@color/colorLightText"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_desc" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/detail_diff_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="monospace"
+        android:text="N/A"
+        android:textColor="@color/colorLightText"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/detail_diff" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/detail_questions"
@@ -69,7 +91,7 @@
         android:fontFamily="monospace"
         android:text="Total Questions"
         android:textColor="@color/colorLightText"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_diff" />
 
@@ -81,7 +103,7 @@
         android:fontFamily="monospace"
         android:text="N/A"
         android:textColor="@color/colorLightText"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/detail_questions" />
 
@@ -94,7 +116,7 @@
         android:fontFamily="monospace"
         android:text="Last Score"
         android:textColor="@color/colorLightText"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_questions" />
 
@@ -106,7 +128,7 @@
         android:fontFamily="monospace"
         android:text="N/A"
         android:textColor="@color/colorLightText"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/detail_score" />
 
